# 2DGame

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  projectrc.sh
sdl3-demo/: CMakeLists.txt  animation.h  gameobject.h  sdl3-demo.cpp  timer.h
